fix: changing spring boot version and adding swagger documentations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 route.location.data=data/example
-#server.port=8070
+server.contextPath=/api
+#spring.banner.location=classpath:banner.txt # Banner text resource location.
+
+
+server.port=8088
