feat: adding the short route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 route.location.data=data/example
+
+route.message.success=You may toward the way to station [STATION_END] through line [ROUTE_ID], is there [STATIONS] stations until you get there.
+route.message.error=unfortunately, we haven't a route to you get in the station [ARRIVE] directly from station [DEPARTURE]  
+
 server.contextPath=/api
-#spring.banner.location=classpath:banner.txt # Banner text resource location.
+
+spring.banner.location=classpath:banner.txt
 
 
 server.port=8088
