feat: adding hystrix circuit break.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ route.location.data=data/example
 
 route.message.success=You may toward the way to station [STATION_END] through line [ROUTE_ID], is there [STATIONS] stations until you get there.
 route.message.error=unfortunately, we haven't a route to you get in the station [ARRIVE] directly from station [DEPARTURE]  
+route.message.hystrix=Ah, our services seem to be in some trouble. Maybe you have to run like Tom Cruise. Then, RUUUUNNNN!  Just Kidding.  
 
 server.contextPath=/api
 
